Update last remaining pathfinder URLs, enable controller Swagger API
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/openshift/templates/controller-rev/controller-rev-deploy.yaml
+++ b/openshift/templates/controller-rev/controller-rev-deploy.yaml
@@ -300,7 +300,7 @@ parameters:
     name: TAG_NAME
     value: latest
   - name: APPLICATION_DOMAIN
-    description: The exposed hostname that will route to the service, e.g., myappname.pathfinder.gov.bc.ca, if left blank a value will be defaulted.
+    description: The exposed hostname that will route to the service, e.g., myappname.apps.silver.devops.gov.bc.ca, if left blank a value will be defaulted.
     displayName: Application Hostname
     value: ""
   - name: AGENT_ADMIN_URL
