--- a/openshift/templates/issuer-agent/issuer-agent-deploy.yaml
+++ b/openshift/templates/issuer-agent/issuer-agent-deploy.yaml
@@ -435,12 +435,12 @@ parameters:
   - name: IMAGE_NAMESPACE
     displayName: Namespace containing application images.
     required: true
-    value: 4a9599-tools
+    value: e79518-tools
   - name: NAMESPACE_NAME
     displayName: Namespace Name
     description: The name of the namespace being deployed to.
     required: true
-    value: 4a9599
+    value: e79518
   - name: SOURCE_IMAGE_NAME
     displayName: Source Image Name
     description: The name of the source image to use for the service.
