--- a/openshift/templates/issuer-wallet/issuer-wallet-deploy.yaml
+++ b/openshift/templates/issuer-wallet/issuer-wallet-deploy.yaml
@@ -9,9 +9,9 @@ objects:
   - kind: NetworkPolicy
     apiVersion: networking.k8s.io/v1
     metadata:
-      name: ${NAME}
+      name: ${NAME}${SUFFIX}
       labels:
-        name: ${NAME}
+        name: ${NAME}${SUFFIX}
         app: ${APP_NAME}${SUFFIX}
         env: ${TAG_NAME}
         backup: ${BACKUP}
@@ -257,12 +257,12 @@ parameters:
     required: true
     description: The namespace of the OpenShift project containing the imagestream
       for the application.
-    value: 4a9599-tools
+    value: e79518-tools
   - name: NAMESPACE_NAME
     displayName: Namespace Name
     description: The base namespace name for the project.
     required: true
-    value: 4a9599
+    value: e79518
   - name: SOURCE_IMAGE_NAME
     displayName: Source Image Name
     description: The name of the image to use for this resource.
