--- a/openshift/templates/issuer-db/issuer-db-deploy.yaml
+++ b/openshift/templates/issuer-db/issuer-db-deploy.yaml
@@ -218,7 +218,7 @@ parameters:
     displayName: Namespace Name
     description: The base namespace name for the project.
     required: true
-    value: 4a9599
+    value: e79518
   - name: NAME
     displayName: Name
     description: The name assigned to all of the OpenShift resources associated to
@@ -258,7 +258,7 @@ parameters:
     required: true
     description: The namespace of the OpenShift project containing the imagestream
       for the application.
-    value: 4a9599-tools
+    value: e79518-tools
   - name: SOURCE_IMAGE_NAME
     displayName: Source Image Name
     description: The name of the image to use for this resource.
