--- a/openshift/templates/issuer-web/issuer-web-build.yaml
+++ b/openshift/templates/issuer-web/issuer-web-build.yaml
@@ -101,7 +101,7 @@ parameters:
     displayName: Source Image Namespace
     description: The namespace containing the artifact image.
     required: true
-    value: 4a9599-tools
+    value: e79518-tools
   - name: ARTIFACT_IMAGE_KIND
     displayName: Artifact Image Kind
     description: The 'kind' (type) of the artifact image; typically ImageStreamTag,
