--- a/openshift/templates/issuer-web/issuer-web-deploy.yaml
+++ b/openshift/templates/issuer-web/issuer-web-deploy.yaml
@@ -295,12 +295,12 @@ parameters:
     displayName: Image Namespace
     name: IMAGE_NAMESPACE
     required: true
-    value: 4a9599-tools
+    value: e79518-tools
   - name: NAMESPACE_NAME
     displayName: Namespace Name
     description: The name of the namespace being deployed to..
     required: true
-    value: 4a9599
+    value: e79518
   - name: CADDY_CONFIG_FILE_NAME
     displayName: CAddy Config File Name
     description: The name of the configuration file to be used for Caddy.
