Fix labels in database deployment config
Signed-off-by: Emiliano Suñé <emiliano.sune@gmail.com>

--- a/openshift/templates/database/database-deploy.yaml
+++ b/openshift/templates/database/database-deploy.yaml
@@ -98,6 +98,7 @@ objects:
             app-group: ${APP_GROUP}
             role: ${PREFIX}${ROLE}
             env: ${TAG_NAME}
+            backup: ${BACKUP}
         spec:
           volumes:
             - name: ${PREFIX}${NAME}-data
