updated pipelines and got rid of wallet and db a2a params

--- a/openshift/templates/issuer-web/issuer-web-deploy.yaml
+++ b/openshift/templates/issuer-web/issuer-web-deploy.yaml
@@ -12,8 +12,8 @@ objects:
       name: ${NAME}-allow-ingress
       labels:
         name: ${NAME}-allow-ingress
-        app: ${APP_GROUP}
-        app-group: ${APP_GROUP}
+        app: ${APP_NAME}${SUFFIX}
+        app-group: ${APP_GROUP}${SUFFIX}
         role: ${ROLE}
         env: ${TAG_NAME}
     spec:
@@ -27,7 +27,7 @@ objects:
       podSelector:
         matchLabels:
           role: ${ROLE}
-          app: ${APP_GROUP}
+          app: ${APP_NAME}${SUFFIX}
           env: ${TAG_NAME}
       policyTypes:
         - Ingress
