--- a/jenkins/backup/Jenkinsfile
+++ b/jenkins/backup/Jenkinsfile
@@ -2,7 +2,7 @@ def PIPELINE_NAME = "backup"
 
 def LIB_NAME= "custom-lib"
 def LIB_REPO = "https://github.com/wadeking98/a2a-trust-over-ip-configurations.git"
-def LIB_BRANCH = "master"
+def LIB_BRANCH = "feature-ocp4"
 library identifier: "${LIB_NAME}@${LIB_BRANCH}", 
         retriever: modernSCM(
           [$class: 'GitSCMSource',
