updated  issuer jenkins file
Signed-off-by: wadeking98 <wkingnumber2@gmail.com>

--- a/openshift/templates/issuer-web/issuer-web-build.yaml
+++ b/openshift/templates/issuer-web/issuer-web-build.yaml
@@ -91,7 +91,7 @@ parameters:
     displayName: Artifact Image Name
     description: The name of the image containing the built artifacts.
     required: true
-    value: issuer-web-base
+    value: issuer-kit-web-base
   - name: ARTIFACT_IMAGE_TAG
     displayName: Artifact Image Name
     description: The tag of the image containing the built artifacts
