updated jenkins file namespace
Signed-off-by: wadeking98 <wkingnumber2@gmail.com>

--- a/jenkins/issuer/Jenkinsfile
+++ b/jenkins/issuer/Jenkinsfile
@@ -20,7 +20,7 @@ def DEP_ENV_NAMES = ['dev', 'test', 'prod']
 
 
 // The base namespace of you environments.
-def NAME_SPACE = 'nnfbch'
+def NAME_SPACE = 'e79518'
 
 // Get an image's hash tag
 String getImageTagHash(String imageName, String tag = "") {
