changes to PR suffix patterns
Signed-off-by: wadeking98 <wkingnumber2@gmail.com>

--- a/openshift/templates/issuer-agent/issuer-agent-deploy.yaml
+++ b/openshift/templates/issuer-agent/issuer-agent-deploy.yaml
@@ -254,7 +254,7 @@ objects:
                 - name: WALLET_TYPE
                   value: ${WALLET_STORAGE_TYPE}
                 - name: POSTGRESQL_WALLET_HOST
-                  value: ${WALLET_HOST}${SUFFIX}
+                  value: ${WALLET_HOST}${WALLET_SUFFIX}
                 - name: POSTGRESQL_WALLET_PORT
                   value: ${WALLET_HOST_PORT}
                 - name: WALLET_STORAGE_CONFIGURATION
@@ -264,17 +264,17 @@ objects:
                 - name: POSTGRESQL_WALLET_USER
                   valueFrom:
                     secretKeyRef:
-                      name: ${WALLET_HOST}${SUFFIX}
+                      name: ${WALLET_HOST}${WALLET_SUFFIX}
                       key: database-user
                 - name: POSTGRESQL_WALLET_PASSWORD
                   valueFrom:
                     secretKeyRef:
-                      name: ${WALLET_HOST}${SUFFIX}
+                      name: ${WALLET_HOST}${WALLET_SUFFIX}
                       key: database-password
                 - name: POSTGRESQL_WALLET_ADMIN_PASSWORD
                   valueFrom:
                     secretKeyRef:
-                      name: ${WALLET_HOST}${SUFFIX}
+                      name: ${WALLET_HOST}${WALLET_SUFFIX}
                       key: admin-password
                 - name: WALLET_ENCRYPTION_KEY
                   valueFrom:
@@ -556,6 +556,11 @@ parameters:
     required: false
     generate: expression
     from: "[a-zA-Z0-9]{16}"
+  - name: WALLET_SUFFIX
+    displayName: Wallet Suffix
+    description: The suffix attached to the wallet
+    required: false
+    value:
   # ===============================================================================
   # Tails Files Configuration
   #--------------------------------------------------------------------------------
