--- a/openshift/templates/controller/controller-deploy.yaml
+++ b/openshift/templates/controller/controller-deploy.yaml
@@ -13,6 +13,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}-allow-ingress
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${ROLE}
         env: ${TAG_NAME}
@@ -28,6 +29,7 @@ objects:
         matchLabels:
           role: ${PREFIX}${ROLE}
           app: ${APP_NAME}
+          app.kubernetes.io/part-of: ${APP_NAME}
           app-group: ${APP_GROUP}
           env: ${TAG_NAME}
       policyTypes:
@@ -40,6 +42,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -53,6 +56,7 @@ objects:
                   role: ${PREFIX}${AGENT_ROLE}
                   app-group: ${APP_GROUP}
                   app: ${APP_NAME}
+                  app.kubernetes.io/part-of: ${APP_NAME}
                   env: ${TAG_NAME}
               namespaceSelector:
                 matchLabels:
@@ -67,6 +71,7 @@ objects:
           role: ${PREFIX}${ROLE}
           app-group: ${APP_GROUP}
           app: ${APP_NAME}
+          app.kubernetes.io/part-of: ${APP_NAME}
           env: ${TAG_NAME}
 
   - kind: Secret
@@ -76,6 +81,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -90,6 +96,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -97,6 +104,7 @@ objects:
       replicas: 1
       selector:
         app: ${APP_GROUP}
+        app.kubernetes.io/part-of: ${APP_GROUP}
         app-group: ${APP_GROUP}
         name: ${PREFIX}${NAME}
         role: ${PREFIX}${ROLE}
@@ -114,6 +122,7 @@ objects:
           labels:
             name: ${PREFIX}${NAME}
             app: ${APP_NAME}
+            app.kubernetes.io/part-of: ${APP_NAME}
             app-group: ${APP_GROUP}
             role: ${PREFIX}${ROLE}
             env: ${TAG_NAME}
@@ -203,6 +212,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -221,6 +231,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -242,6 +253,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
