--- a/openshift/templates/issuer-db/issuer-db-build.yaml
+++ b/openshift/templates/issuer-db/issuer-db-build.yaml
@@ -10,6 +10,7 @@ objects:
       labels:
         name: ${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
   - kind: BuildConfig
     apiVersion: v1
@@ -18,6 +19,7 @@ objects:
       labels:
         name: ${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
     spec:
       triggers:
