--- a/openshift/templates/issuer-web/issuer-web-deploy.yaml
+++ b/openshift/templates/issuer-web/issuer-web-deploy.yaml
@@ -36,6 +36,7 @@ objects:
     metadata:
       labels:
         app: ${APP_NAME}${SUFFIX}
+        app.kubernetes.io/part-of: ${APP_NAME}${SUFFIX}
         name: ${NAME}${SUFFIX}
         app-group: ${APP_GROUP}
         role: ${ROLE}
@@ -62,6 +63,7 @@ objects:
         metadata:
           labels:
             app: ${APP_NAME}${SUFFIX}
+            app.kubernetes.io/part-of: ${APP_NAME}${SUFFIX}
             name: ${NAME}${SUFFIX}
             app-group: ${APP_GROUP}
             role: ${ROLE}
@@ -208,6 +210,7 @@ objects:
     metadata:
       labels:
         app: ${APP_NAME}${SUFFIX}
+        app.kubernetes.io/part-of: ${APP_NAME}${SUFFIX}
         name: ${NAME}${SUFFIX}
         app-group: ${APP_GROUP}
         role: ${ROLE}
@@ -229,6 +232,7 @@ objects:
     metadata:
       labels:
         app: ${APP_NAME}${SUFFIX}
+        app.kubernetes.io/part-of: ${APP_NAME}${SUFFIX}
         name: ${NAME}${SUFFIX}
         app-group: ${APP_GROUP}
         role: ${ROLE}
