--- a/openshift/templates/wallet/wallet-deploy.yaml
+++ b/openshift/templates/wallet/wallet-deploy.yaml
@@ -13,6 +13,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -26,6 +27,7 @@ objects:
                 matchLabels:
                   role: ${PREFIX}${AGENT_ROLE}
                   app: ${APP_NAME}
+                  app.kubernetes.io/part-of: ${APP_NAME}
                   app-group: ${APP_GROUP}
                   env: ${TAG_NAME}
               namespaceSelector:
@@ -36,6 +38,7 @@ objects:
                 matchLabels:
                   role: ${PREFIX}${AGENT_ROLE}
                   app: ${APP_NAME}-rev
+                  app.kubernetes.io/part-of: ${APP_NAME}-rev
                   app-group: ${APP_GROUP}-rev
                   env: ${TAG_NAME}
               namespaceSelector:
@@ -49,6 +52,7 @@ objects:
         matchLabels:
           role: ${PREFIX}${ROLE}
           app: ${APP_NAME}
+          app.kubernetes.io/part-of: ${APP_NAME}
           app-group: ${APP_GROUP}
           env: ${TAG_NAME}
 
@@ -60,6 +64,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}        
@@ -86,6 +91,7 @@ objects:
       selector:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -94,6 +100,7 @@ objects:
           labels:
             name: ${PREFIX}${NAME}
             app: ${APP_NAME}
+            app.kubernetes.io/part-of: ${APP_NAME}
             app-group: ${APP_GROUP}
             role: ${PREFIX}${ROLE}
             env: ${TAG_NAME}
@@ -174,6 +181,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -191,6 +199,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -206,6 +215,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
