--- a/openshift/templates/backup/backup-build.yaml
+++ b/openshift/templates/backup/backup-build.yaml
@@ -11,6 +11,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
   - kind: BuildConfig
     apiVersion: v1
@@ -19,6 +20,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
     spec:
       triggers:
