--- a/openshift/templates/controller-rev/controller-rev-deploy.yaml
+++ b/openshift/templates/controller-rev/controller-rev-deploy.yaml
@@ -13,6 +13,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}-allow-ingress
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${ROLE}
         env: ${TAG_NAME}
@@ -28,6 +29,7 @@ objects:
         matchLabels:
           name: ${PREFIX}${NAME}
           app: ${APP_NAME}
+          app.kubernetes.io/part-of: ${APP_NAME}
           app-group: ${APP_GROUP}
           role: ${PREFIX}${ROLE}
           env: ${TAG_NAME}
@@ -41,6 +43,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -53,6 +56,7 @@ objects:
                 matchLabels:
                   role: ${PREFIX}${AGENT_ROLE}
                   app: ${APP_NAME}
+                  app.kubernetes.io/part-of: ${APP_NAME}
                   env: ${TAG_NAME}
               namespaceSelector:
                 matchLabels:
@@ -65,6 +69,7 @@ objects:
         matchLabels:
           name: ${PREFIX}${NAME}
           app: ${APP_NAME}
+          app.kubernetes.io/part-of: ${APP_NAME}
           app-group: ${APP_GROUP}
           role: ${PREFIX}${ROLE}
           env: ${TAG_NAME}
@@ -76,6 +81,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -90,6 +96,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -97,6 +104,7 @@ objects:
       replicas: 1
       selector:
         app: ${APP_GROUP}
+        app.kubernetes.io/part-of: ${APP_GROUP}
         name: ${PREFIX}${NAME}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -113,6 +121,7 @@ objects:
           labels:
             name: ${PREFIX}${NAME}
             app: ${APP_NAME}
+            app.kubernetes.io/part-of: ${APP_NAME}
             app-group: ${APP_GROUP}
             role: ${PREFIX}${ROLE}
             env: ${TAG_NAME}
@@ -202,6 +211,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -219,6 +229,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -239,6 +250,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
