--- a/openshift/templates/database/database-deploy.yaml
+++ b/openshift/templates/database/database-deploy.yaml
@@ -13,6 +13,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -26,6 +27,7 @@ objects:
                 matchLabels:
                   role: ${PREFIX}${CONTROLLER_ROLE}
                   app: ${APP_NAME}
+                  app.kubernetes.io/part-of: ${APP_NAME}
                   app-group: ${APP_GROUP}
                   env: ${TAG_NAME}
               namespaceSelector:
@@ -36,6 +38,7 @@ objects:
                 matchLabels:
                   role: ${PREFIX}${CONTROLLER_ROLE}
                   app: ${APP_NAME}-rev
+                  app.kubernetes.io/part-of: ${APP_NAME}-rev
                   app-group: ${APP_GROUP}-rev
                   env: ${TAG_NAME}
               namespaceSelector:
@@ -49,6 +52,7 @@ objects:
         matchLabels:
           role: ${PREFIX}${ROLE}
           app: ${APP_NAME}
+          app.kubernetes.io/part-of: ${APP_NAME}
           app-group: ${APP_GROUP}
           env: ${TAG_NAME}
 
@@ -60,6 +64,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -87,6 +92,7 @@ objects:
       selector:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -95,6 +101,7 @@ objects:
           labels:
             name: ${PREFIX}${NAME}
             app: ${APP_NAME}
+            app.kubernetes.io/part-of: ${APP_NAME}
             app-group: ${APP_GROUP}
             role: ${PREFIX}${ROLE}
             env: ${TAG_NAME}
@@ -180,6 +187,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -199,6 +207,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
@@ -220,6 +229,7 @@ objects:
       labels:
         name: ${PREFIX}${NAME}
         app: ${APP_NAME}
+        app.kubernetes.io/part-of: ${APP_NAME}
         app-group: ${APP_GROUP}
         role: ${PREFIX}${ROLE}
         env: ${TAG_NAME}
