--- a/openshift/templates/backup/config/backup.conf
+++ b/openshift/templates/backup/config/backup.conf
@@ -51,6 +51,7 @@ postgres=wallet-lsbc/agent_lsbc_wallet
 postgres=wallet-prime/agent_prime_wallet
 postgres=wallet-prime/agent_sandbox_prime_wallet
 postgres=wallet-health-gateway/agent_health_gateway_wallet
+postgres=wallet-buybc/agent_buybc_wallet
 
 # Schedule backup for 1am PST; system TZ is PST
 0 1 * * * default ./backup.sh -s
